Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1788

[C++] ColumnWriter has undefined behavior when writing arrow chunks

    XMLWordPrintableJSON

Details

    Description

      We blindly add offset to dep_level and rep_level inside chunking callbacks when these are nullptrs (I believe this occurs if the schema is flat) we still apply the offset which triggers UBSan.

      Attachments

        Issue Links

          Activity

            People

              emkornfield@gmail.com Micah Kornfield
              emkornfield@gmail.com Micah Kornfield
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m