PARQUET-1788: Remove UBSan when rep/dev levels are null